--- a/documents.html
+++ b/documents.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Официальные документы для аттестации преподавателя-организатора ОБЗР - справки, дипломы, сертификаты, грамоты">
     <title>Документы для аттестации | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -1150,8 +1156,8 @@
     <li class="has-submenu">
       <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
         <ul class="submenu">
-            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
-            <li><a href="novosti">Последние новости</a></li>
+            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
+            <li><a href="novosti.html">Последние новости</a></li>
         </ul>
     </li>
 
@@ -1159,20 +1165,20 @@
     <li class="has-submenu">
         <a href="about.html" class="active" onclick="return handleSubmenuClick(event, this)">О себе</a>
         <ul class="submenu">
-            <li><a href="obrazovanie">Образование</a></li>
-            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-            <li><a href="nagrady">Награды и достижения</a></li>
+            <li><a href="obrazovanie.html">Образование</a></li>
+            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+            <li><a href="nagrady.html">Награды и достижения</a></li>
         </ul>
     </li>
 
     <!-- 3. ПОРТФОЛИО (с подменю) -->
     <li class="has-submenu">
-        <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
+        <a href="portfolio.html" class="active" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
         <ul class="submenu">
-            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-            <li><a href="documents">Документы портфолио</a></li>
+            <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
+            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+            <li><a href="documents.html" style="font-weight: 700; color: var(--color-primary);">Документы портфолио</a></li>
         </ul>
     </li>
 
@@ -1180,10 +1186,10 @@
     <li class="has-submenu">
         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
         <ul class="submenu">
-            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
-            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+            <li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li>
+            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li>
+            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
         </ul>
     </li>
 
@@ -1191,10 +1197,10 @@
     <li class="has-submenu">
         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
         <ul class="submenu">
-            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
-            <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
+            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
+            <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
         </ul>
     </li>
 
@@ -1202,12 +1208,12 @@
     <li class="has-submenu">
         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
         <ul class="submenu">
-            <li><a href="yunarmiya">Юнармия</a></li>
-            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-            <li><a href="zarnica">Зарница 2.0</a></li>
-            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
-            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+            <li><a href="yunarmiya.html">Юнармия</a></li>
+            <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
+            <li><a href="zarnica.html">Зарница 2.0</a></li>
+            <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
+            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
+            <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
         </ul>
     </li>
 
@@ -1215,12 +1221,12 @@
      <li class="has-submenu">
                         <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
-                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
-                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
-                            <li><a href="feedback">Обратная связь</a></li>
-                            <li><a href="grading">Как оценивается ОБЗР</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
+                            <li><a href="help-at-home.html">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps.html">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue.html">Диалоги о безопасности</a></li>
+                            <li><a href="feedback.html">Обратная связь</a></li>
+                            <li><a href="grading.html">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
 
@@ -1916,14 +1922,22 @@
                 </ul>
             </div>
         </div>
-  <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.)<br><br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-       
-    </footer>
 
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
+
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>
+    
     <!-- Плавающая кнопка QR (НЕ ТРОГАТЬ!) -->
     <div id="qrFloatingButton" 
          style="position: fixed; 
