--- a/documents.html
+++ b/documents.html
@@ -1163,7 +1163,7 @@
 
     <!-- 2. О СЕБЕ (с подменю) -->
     <li class="has-submenu">
-        <a href="about.html" class="active" onclick="return handleSubmenuClick(event, this)">О себе</a>
+        <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
         <ul class="submenu">
             <li><a href="obrazovanie.html">Образование</a></li>
             <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
