--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1462,7 +1462,7 @@ window.addEventListener('load', () => {
                         <h3>Цифровой фантом</h3>
                         
                         <div class="book-meta">
-                            <p><strong>Автор:</strong> © А.Ю.Дёмин, 2025</p>
+                            <p><strong>Автор:</strong> © А.Ю.Дёмин, 2025-2026</p>
                             <p><strong>Жанр:</strong> Образовательный детектив для подростков</p>
                             <p><strong>Создано с помощью:</strong> <span class="ai-badge">Claude AI</span></p>
                             <p><strong>Примечание:</strong> При копировании ссылка на источник обязательна</p>
