--- a/music-projects.html
+++ b/music-projects.html
@@ -949,7 +949,7 @@ function closeRestoreNotification() {
             <div class="author-meta">
                 <div style="display: flex; justify-content: space-between; align-items: start; gap: 2rem; flex-wrap: wrap;">
                     <div style="flex: 1; min-width: 200px;">
-                        <strong>Автор:</strong> © А.Ю.Дёмин, 2025<br>
+                        <strong>Автор:</strong> © А.Ю.Дёмин, 2025-2026<br>
                         <strong>Инструменты:</strong> Perplexity AI, Claude AI, Suno AI<br>
                         <strong>Формат:</strong> MP3<br>
                         <strong>Примечание:</strong> При копировании ссылка на источник обязательна
@@ -2560,6 +2560,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
