--- a/rezultaty-obucheniya.html
+++ b/rezultaty-obucheniya.html
@@ -208,7 +208,7 @@
         }
 
         .submenu a {
-            color: white;
+            color: var(--color-text-primary);
             text-decoration: none;
             padding: 0.65rem 1.5rem;
             display: flex;
