--- a/metodicheskaya-aktivnost.html
+++ b/metodicheskaya-aktivnost.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Методическая активность преподавателя ОБЗР: участие в РМО, открытые уроки, публикации, авторские материалы">
     <title>Методическая активность | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -169,27 +175,6 @@
             z-index: 1000;
         }
 
-        .nav-menu > li.has-submenu > a.active + .submenu li {
-            background-color: #E53935;
-        }
-
-        .nav-menu > li.has-submenu > a.active + .submenu a {
-            color: var(--color-primary);
-        }
-
-        .nav-menu > li.has-submenu > a.active + .submenu a:hover {
-            background-color: white;
-            color: var(--color-primary);
-        }
-
-        .nav-menu > li.has-submenu > a.active + .submenu a::before {
-            color: white;
-        }
-
-        .nav-menu > li.has-submenu > a.active + .submenu a:hover::before {
-            color: var(--color-danger);
-        }
-
         .nav-menu > li.has-submenu > a:not(.active) + .submenu li {
             background-color: white;
         }
@@ -219,7 +204,7 @@
         }
 
         .submenu a {
-            color: white;
+            color: var(--color-text-primary);
             text-decoration: none;
             padding: 0.65rem 1.5rem;
             display: flex;
@@ -650,9 +635,9 @@
                     <li class="has-submenu">
                         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
                         <ul class="submenu">
-                            <li><a href="obrazovanie">Образование</a></li>
-                            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="nagrady">Награды и достижения</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
+                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
 
@@ -661,7 +646,7 @@
                         <ul class="submenu">
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="metodicheskaya-aktivnost.html" style="font-weight: 700; color: var(--color-primary);">Методическая активность</a></li>
                             <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
@@ -669,10 +654,10 @@
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
-                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-                            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
 
@@ -682,7 +667,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -693,7 +678,7 @@
                             <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -1046,13 +1031,21 @@
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.). <br>
-            Все материалы проверены и адаптированы в соответствии с требованиями ФГОС.</p>
-        </div>
-    </footer>
+    <!-- ✅ АВТОМАТИЧЕСКИЙ ГОД -->
+    <div class="footer-bottom">
+        <p>&copy; 2025–<span id="currentYear"></span> Дёмин Александр Юрьевич. Все права защищены.</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">
+            При создании некоторых материалов сайта использовались инструменты искусственного интеллекта (Claude AI, Perplexity AI, Suno AI и др.).<br>
+            Все материалы проверены и адаптированы в соответствии с требованиям ФГОС.
+        </p>
+    </div>
+</footer>
 
+<!-- ✅ СКРИПТ ОБНОВЛЕНИЯ ГОДА -->
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>
+   
     <!-- Плавающая кнопка QR -->
     <div id="qrFloatingButton" 
          style="position: fixed; 
