--- a/visual-projects.html
+++ b/visual-projects.html
@@ -684,10 +684,10 @@
                     <li class="has-submenu">
                         <a href="ai-projects.html" class="active" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov.html" style="font-weight: 700; color: var(--color-primary);">Для учеников</a></li>
-                            <li><a href="ai-dlya-roditelej.html">Для родителей</a></li>
-                            <li><a href="ai-dlya-kolleg.html">Для коллег</a></li>
-                            <li><a href="ai-resursy.html">Полезные ресурсы</a></li>
+                            <li><a href="ai-dlya-uchenikov.html" style="font-weight: 700; color: var(--color-primary);">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
+                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -1760,5 +1760,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
