--- a/contacts.html
+++ b/contacts.html
@@ -160,7 +160,7 @@
                 <div class="contact-icon">📧</div>
                 <div class="contact-title">Email</div>
                 <div class="contact-info">
-                    <a href="/cdn-cgi/l/email-protection#fd9998909493d3929f878fbd8e9e95929291cfd091848e96928b92d38f88"><span class="__cf_email__" data-cfemail="b9d8dddcd4d0d788808e8ef9cfd297dad6d4">[email&#160;protected]</span></a>
+                    <a href="/cdn-cgi/l/email-protection#fd9998909493d3929f878fbd8e9e95929291cfd091848e96928b92d38f88"><span class="__cf_email__" data-cfemail="b9d8dddcd4d0d788808e8ef9cfd297dad6d4">ademin1977@vk.com</span></a>
                 </div>
             </div>
 
@@ -182,7 +182,7 @@
                 <div class="contact-info">
                     По предварительной<br>
                     договорённости<br>
-                    (напишите на email)
+                    (свяжитесь со мной любым удобным способом)
                 </div>
             </div>
         </div>
@@ -290,7 +290,7 @@
             <p style="margin-top: 1rem;">
                 <strong>Адрес:</strong> Нижегородская область, г. Лысково, ул. Нестерова, д. 2А<br>
                 <strong>Телефон:</strong> <a href="tel:+78314954449">+7(831)4954449</a><br>
-                <strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#34066b58475f7459555d581a0106535b421a4641"><span class="__cf_email__" data-cfemail="91a3cefde2fad1fcf0f8fdbfa4a3f6fee7bfe3e4">[email&#160;protected]</span></a><br>
+                <strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#34066b58475f7459555d581a0106535b421a4641"><span class="__cf_email__" data-cfemail="91a3cefde2fad1fcf0f8fdbfa4a3f6fee7bfe3e4">2_lsk@mail.52gov.ru</span></a><br>
                 <strong>Сайт школы:</strong> <a href="https://school2lsk.gosuslugi.ru" target="_blank">https://school2lsk.gosuslugi.ru/</a>
             </p>
         </div>
@@ -313,7 +313,7 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#7d1c19181014134c444a4a3d0b16531e1210"><span class="__cf_email__" data-cfemail="c8a9acada5a1a6f9f1ffff88bea3e6aba7a5">[email&#160;protected]</span></a></li>
+                    <li>📧 Email: <a href="/cdn-cgi/l/email-protection#7d1c19181014134c444a4a3d0b16531e1210"><span class="__cf_email__" data-cfemail="c8a9acada5a1a6f9f1ffff88bea3e6aba7a5">ademin1977@vk.com</span></a></li>
                     <li>📍 МБОУ СШ № 2 г. Лысково</li>
                     <li>📞 Консультации: по согласованию</li>
                 </ul>
