Format contact information for better readability

--- a/contacts.html
+++ b/contacts.html
@@ -182,7 +182,8 @@
                 <div class="contact-info">
                     По предварительной<br>
                     договорённости<br>
-                    (свяжитесь со мной любым удобным способом)
+                    (свяжитесь со мной <br>
+                    любым удобным способом)
                 </div>
             </div>
         </div>
