--- a/feedback.html
+++ b/feedback.html
@@ -247,7 +247,7 @@
                     <li class="has-submenu"><a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a><ul class="submenu"><li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li><li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li><li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li><li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li></ul></li>
                     <li class="has-submenu"><a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a><ul class="submenu"><li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li><li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li><li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li><li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li></ul></li>
                     <li class="has-submenu"><a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a><ul class="submenu"><li><a href="yunarmiya.html">Юнармия</a></li><li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li><li><a href="zarnica.html">Зарница 2.0</a></li><li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li><li><a href="sbory.html">Учебно-полевые сборы</a></li><li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li></ul></li>
-                    <li class="has-submenu"><a href="parents.html" class="active" onclick="return handleSubmenuClick(event, this)">Родителям</a><ul class="submenu"><li><a href="help-at-home.html">Как помочь ребёнку дома</a></li><li><a href="training-camps.html">Готовимся к учебным сборам</a></li><li><a href="safety-dialogue.html">Диалоги о безопасности</a></li><li><a href="feedback.html">Обратная связь</a></li><li><a href="grading.html">Как оценивается ОБЗР</a></li><li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li></ul></li>
+                    <li class="has-submenu"><a href="parents.html" class="active" onclick="return handleSubmenuClick(event, this)">Родителям</a><ul class="submenu"><li><a href="help-at-home.html">Как помочь ребёнку дома</a></li><li><a href="training-camps.html">Готовимся к учебным сборам</a></li><li><a href="safety-dialogue.html">Диалоги о безопасности</a></li><li><a href="feedback.html" style="font-weight: 700; color: var(--color-primary);">Обратная связь</a></li><li><a href="grading.html">Как оценивается ОБЗР</a></li><li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li></ul></li>
                     <li class="has-submenu"><a href="contacts.html" onclick="return handleSubmenuClick(event, this)">Контакты</a><ul class="submenu"><li><a href="contacts.html#feedback-form">Форма обратной связи</a></li><li><a href="contacts.html#about-school">О школе</a></li><li><a href="contacts.html#useful-links">Полезные ссылки</a></li><li><a href="privacy-policy.html">Политика конфиденциальности</a></li></ul></li>
                     <li class="has-submenu"><a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a><ul class="submenu"><li><a href="interactive.html">Оставить отзыв о работе сайта</a></li></ul></li>
                 </ul>
@@ -324,8 +324,8 @@
             <div class="contact-card">
                 <span class="contact-card-icon">✉️</span>
                 <h3>Форма обратной связи</h3>
-                <p class="card-desc">Быстрая отправка вопроса прямо с этой страницы</p>
-                <div class="card-detail"><a href="contacts.html#feedback-form">Заполните форму ниже ↓</a></div>
+                <p class="card-desc">Быстрая отправка вопроса прямо со страницы сайта</p>
+                <div class="card-detail"><a href="contacts.html#feedback-form">Заполните форму ↓</a></div>
                 <div class="card-note">
                     <strong>Ответ:</strong>
                     На указанный email в течение 24-48 часов
@@ -348,9 +348,9 @@
                 <div class="when-card planned">
                     <h3>📅 Плановые вопросы</h3>
                     <ul>
-                        <li>Обсуждение успеваемости → Email или личная встреча</li>
-                        <li>Вопросы по программе модуля № 2 (военная подготовка) → Email</li>
-                        <li>Запись на консультацию → Email или форма</li>
+                        <li>Обсуждение успеваемости → Email, форма обратной связи или личная встреча</li>
+                        <li>Вопросы по программе модуля № 2 (военная подготовка) → Email или через форму обратной связи</li>
+                        <li>Запись на консультацию → Email, мессенджеры или форма обратной связи</li>
                         <li>Уточнение домашнего задания → Email или мессенджеры</li>
                     </ul>
                 </div>
@@ -402,7 +402,7 @@
             </table>
             <div class="how-to-sign">
                 <strong>📋 Как записаться:</strong>
-                Отправьте запрос по email (<a href="mailto:ademin1977@vk.com">ademin1977@vk.com</a>) или заполните форму обратной связи на этой странице, указав удобное для вас время. Я подтвержу встречу ответным письмом.
+                Отправьте запрос по email (<a href="mailto:ademin1977@vk.com">ademin1977@vk.com</a>) или заполните форму обратной связи на странице сайта "Контакты", указав удобное для вас время. Я подтвержу встречу ответным письмом.
             </div>
         </div>
 
