Update urgent contact options in feedback.html

--- a/feedback.html
+++ b/feedback.html
@@ -340,9 +340,9 @@
                 <div class="when-card urgent">
                     <h3>🚨 Срочные ситуации</h3>
                     <ul>
-                        <li>Ребёнок не пришёл на урок → Телефон школы</li>
-                        <li>Срочный вопрос по учебным сборам → Телефон школы</li>
-                        <li>Проблема, требующая немедленного решения → Звонок в администрацию</li>
+                        <li>Ребёнок не пришёл на урок → Телефон школы или мессенджеры</li>
+                        <li>Срочный вопрос по учебным сборам → Телефон школы или мессенджеры</li>
+                        <li>Проблема, требующая немедленного решения → Звонок в администрацию или любым другим доступным способом</li>
                     </ul>
                 </div>
                 <div class="when-card planned">
