--- a/feedback.html
+++ b/feedback.html
@@ -342,7 +342,7 @@
                     <ul>
                         <li>Ребёнок не пришёл на урок → Телефон школы или мессенджеры</li>
                         <li>Срочный вопрос по учебным сборам → Телефон школы или мессенджеры</li>
-                        <li>Проблема, требующая немедленного решения → Звонок в администрацию или любым другим доступным способом</li>
+                        <li>Проблема, требующая немедленного решения → Звонок в администрацию либо сообщение любым другим доступным способом</li>
                     </ul>
                 </div>
                 <div class="when-card planned">
